--- a/style.css
+++ b/style.css
@@ -167,3 +167,13 @@
     text-align: justify;
     margin-top: 2%;
 }
+
+
+/* Responsive  */
+@media screen and (max-width:965px)
+{
+    .contact
+    {
+        margin: 20px 0px;
+    }
+}
